--- a/test/fibonacci.lang
+++ b/test/fibonacci.lang
@@ -1,11 +1,16 @@
-f n =>
+fib n =>
     (if (equals n 0)
-        (1)
-        (f
-            (sub n 1)
+        (0)
+        (if (equals n 1)
+            (1)
+            (if (equals n 2)
+                (1)
+                (add
+                    (fib (sub n 1))
+                    (fib (sub n 2))
+                )
+            )
         )
     )
 
-(print_int
-    (f 4)
-)
+(print_int (fib 15))
