--- a/test/fibonacci.lang
+++ b/test/fibonacci.lang
@@ -13,4 +13,12 @@ fib n =>
         )
     )
 
-(print_int (fib 15))
+(print_int (fib 3))
+
+fib n =>
+    if equals n 0 then
+        0
+    else if equals n 1 then 1
+    else add
+        fib subtract n 1
+        fib subtract n 2
