lots of old changes

--- a/test/easy_lazy_pair.lang
+++ b/test/easy_lazy_pair.lang
@@ -1,3 +1,3 @@
-(pair 1 2)
-(first (pair 1 2))
-(second (pair 1 2))
+(print_int (pair 1 2))
+(print_int (first (pair 1 2)))
+(print_int (second (pair 1 2)))
