--- a/test/no_parens.lang
+++ b/test/no_parens.lang
@@ -1,6 +1,3 @@
--- a new minimalistic syntax !!
-if {a} then {b} else {c} => if a b c
-
 fib n =>
     if equals n 0
         0
@@ -11,3 +8,14 @@ fib n =>
                 fib sub n 2
 
 > fib n
+
+range a b =>
+    if equals a b
+        nil
+        pair
+            a
+            range
+                add a 1
+                b
+
+
