--- a/bootstrap/example.lang
+++ b/bootstrap/example.lang
@@ -1,71 +1,25 @@
-# Simple Language Compiler V1
-#   A simple functional programming language compiler
-#   written in itself.
-#
-# - Specification -
-# Primitives:
-#   TRUE, FALSE, NULL, and /[0-9]+/
-#
-#   Built-ins:
-#       def, match, get, let, do, +, -, *, /, =
+(def fib n (do
+    (let a (fib (- n 1)))
+    (let b (fib (- n 2)))
+    (match n
+        0   : 0
+        1   : 1
+        ANY : (+ a b)
+    )
+))
 
-# Takes a sequence and an element,
-# returns if the element can be found in the sequence.
-## (def contains Sq El
-##     (match Sq
-##         NULL FALSE
-##         El   TRUE
-##         ANY  (contains (get Sq 2))
-##     )
-## )
-## 
-## (def filter S F
-##     (match S
-##         NULL NULL
-##         ANY (match (F S)
-##             TRUE [ S (filter (get S 2)) ]
-##             ANY (filter (get S 2))
-##         )
-##     )
-## )
+(print (fib 26))
 
-(def f a b (* a a))
-(print (f (print 0) 10))
+#(def gcd a b (? (= a 0) b (gcd (% b a) a)))
 
-## Takes a sequence, returns the prefix that is a token.
-#(def get_next_token S (do
-#    (let c (get S 1))
-#    (match c 
-#        NULL NULL
-#        ANY (match (contains " \r\n\t" c)
-#            TRUE  NULL
-#            FALSE [ c, (get_next_token (get Sq 2)) ]
-#        )
-#    )
-#))
-#
-#
-## Split a character sequence into a sequence of tokens.
-#(def tokenize S
-#    [ (get_next_token S), (tokenize (seek_next_token S)) ]
-#)
-#
-#(def read_input (do
-#    (let c (read_char 1))
-#    (match c
-#        NULL [ c (read_input) ]
-#        ANY [ c NULL ]
-#    )
-#))
-#
-#(def tokenize input 
-#    (split input " \r\n\t")
-#)
-#
-#(print
-#    (parse
-#        (tokenize
-#            (read_input) # test
+#(do
+#    (let x 3)
+#    (let y 4)
+#    (let z 5)
+#    (print
+#        (=
+#            (+ (square x) (square y))
+#            (square z)
 #        )
 #    )
 #)
