--- a/tests/fib/fib2.lang
+++ b/tests/fib/fib2.lang
@@ -1,12 +1,12 @@
-(def fib n (do
-    (let a (fib (- n 1)))
-    (let b (fib (- n 2)))
+(def fib n
     (match n
         0   : 0
         1   : 1
-        ANY : (+ a b)
+        ANY : (+ (fib (- n 1))
+                 (fib (- n 2))
+        )
     )
-))
+)
 (print (fib 25))
 (print (fib 26))
 (print (fib 27))
